--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Yumo Bai
 description: Software Engineer, Data Scientist
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/XO-Appleton/xo-appleton.github.io/blob/master/images/yumo_bai.jpeg
+avatar: https://github.com/XO-Appleton/xo-appleton.github.io/blob/master/images/yumo_bai.jpeg?raw=true
 
 #
 # Flags below are optional
